--- a/src/components/header/style.module.css
+++ b/src/components/header/style.module.css
@@ -1,6 +1,6 @@
 .container {
     background-color: #1F2833;
-    width: 100%;
+    width: 100vh;
     height: 70px;
     justify-content: center;
     
