--- a/src/components/header/style.module.css
+++ b/src/components/header/style.module.css
@@ -15,8 +15,8 @@
 }
 
 .button {
-    width: 150px;
-    height: 80%;
+    width: 9vw;
+    height: 6vh;
     background-color: #45A29E;
     border: none;
     border-radius: 0.25em;
