--- a/src/components/header/style.module.css
+++ b/src/components/header/style.module.css
@@ -7,8 +7,8 @@
 }
 
 .navbar {
-    width: 1500px;
-    height: 100%;
+    width: 100vw;
+    height: 10vh;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -20,7 +20,6 @@
     background-color: #45A29E;
     border: none;
     border-radius: 0.25em;
-    font-size: 1rem;
     color: #fff;
     padding: 1.25em 0;
     cursor: pointer;
