--- a/src/components/ball/style.module.css
+++ b/src/components/ball/style.module.css
@@ -10,8 +10,8 @@
   background: radial-gradient(circle at 5% 5%, #666, #222 50%), #222;
   border: 1px solid black;
   border-radius: 100%;
-  width: 29vw;
-  height: 60vh;
+  width: 250px;
+  height: 250px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -41,6 +41,7 @@
 
 .p {
   font-size: 2em;
+  color: #66FCF1;
 }
 
 .name {
@@ -50,6 +51,7 @@
 }
 
 .header {
+  display: flex;
   flex-direction: column;
 }
 
