--- a/src/components/tic-tac-toe/style.module.css
+++ b/src/components/tic-tac-toe/style.module.css
@@ -2,3 +2,20 @@
     height: 50px;
     width: 50px; 
 }
+
+.text {
+    color: #66FCF1;
+}
+
+.button {
+    width: 100%;
+    background-color: #45A29E;
+    border: none;
+    outline: none;
+    border-radius: 0.25em;
+    font-size: 1rem;
+    color: #fff;
+    padding: 1.25em 0;
+    margin: 1em 0;
+    cursor: pointer;
+}
